# btc-nok-price-history-reconstruction

./: README.md  ___pyproject.toml  bitstamp.py  bitstamp_btc_daily_closes_may_2014.csv  btc-nok-price-history-reconstruction.csv  btc_daily_closes_2014.csv  btc_nok_historical.csv  btc_nok_historical.py  btc_ohlc_data_2014.json  extract.py  pyproject.toml  reconstruction.py
sources/: btcusd.json
src/btc_nok_reconstruction/: __init__.py  __main__.py  bitstamp.py  btcnok.py  interpolation.py  mtgox.py
src/btc_nok_reconstruction/data/: bitstamp-btc-usd-from-2014-01-01-to-2014-04-09.json  bitstamp-btc-usd-may-2014.json
src/btcnok/: __init__.py  __main__.py  bitstamp.py  btcnok.py  mtgox.py
src/btcnok/data/: B.USD.NOK.SP.csv  norges-bank-usd-nok-may-2014.csv
