[project]
name = "btcnok"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andreas Schjønhaug", email = "andreas@schjonhaug.com" }
]
dependencies = [
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"btcnok" = "btcnok:main"

[tool.rye]
managed = true