[project]
name = "btc-nok-price-history-reconstruction"
version = "0.1.0"
description = "Reconstruct the BTC/NOK price history from 2010 to 2014"
authors = [
    { name = "Andreas Schjønhaug", email = "andreas@schjonhaug.com" }
]
dependencies = [
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"btc_nok_reconstruction" = "btc_nok_reconstruction:main"

[tool.rye]
managed = true